--- a/main.tex
+++ b/main.tex
@@ -369,8 +369,8 @@ citecolor = black]{hyperref} % make links
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
 \newcommand{\eq}{\text{eq}}
-\newcommand{\bi}{\text{bi}}
-\newcommand{\biu}{\text{b}}
+\newcommand{\bi}{bi}%just to be able to change the name :)
+\newcommand{\biu}{b}
 \newcommand{\col}{:}
 
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
