--- a/voorblad.tex
+++ b/voorblad.tex
@@ -4,7 +4,7 @@
 
 \hspace{-\parindent}Notation3 as the Unifying Logic of the Semantic Web\\
 
-\hspace{-\parindent}Notation3 als de verenigende logica voor het Semantische Web
+\hspace{-\parindent}Notation3 als de verenigende logica voor het Semantisch Web
 
 
 \vspace{0.5cm}
@@ -14,7 +14,7 @@
 
 \vspace*{\fill}
 \hspace{-\parindent}Supervisors: prof. dr. R. Verborgh,~ prof. dr. T. Schrijvers\\
-\hspace{-\parindent}Dissertation submitted in fulfillment of the requirements for the degree of\\
+\hspace{-\parindent}Dissertation submitted in fulfilment of the requirements for the degree of\\
 \hspace{-\parindent}Doctor (Ph.D.) in Computer Science Engineering\\
 
 
