chapter over rdf semantics - part 1

--- a/main.tex
+++ b/main.tex
@@ -674,21 +674,33 @@ citecolor = black]{hyperref} % make links
 
 %\part{Semantics}
 
-\chapter{Towards a semantic definition for Notation3 Logic}\label{problem}\label{semantics}
+\chapter{Towards a formal model for N3 Logic}\label{problem}\label{semantics}
 \input{chapters/N3/intro}
 %\input{chapters/N3/Syntax} 
 \input{chapters/N3/Finding_the_meaning}
+\input{chapters/N3/RDF}
 \input{chapters/N3/N3Core}\label{ela}
+\input{chapters/N3/RelatedWork}
+
+
+\chapter{Mapping to Core Logic}
 \input{chapters/N3/Mapping}
+\input{chapters/N3/RW-Mapping}
+
 \input{chapters/N3/Impact}
 \input{chapters/N3/Solutions}
+\input{chapters/N3/RW-ImplicitQuantification}
 \input{chapters/N3/directsemantics}\label{exsem}
-\input{chapters/N3/RelatedWork}
-\input{chapters/N3/Conclusion}
+
+
+
+
+%\input{chapters/N3/Conclusion}
 
 % \chapter{Notation3 Logic as an extension of RDF}
 % \section{The semantics of RDF}
 % \section{Differences between RDF and Notation3 Logic}
+
 
 
 
